--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <a href="index.html" aria-current="page" class="brand-box-2 w-clearfix w-nav-brand w--current"><img src="images/Lit-Electric-logo.png" width="340" sizes="(max-width: 767px) 151.796875px, 284.625px" srcset="images/Lit-Electric-logo-p-500.png 500w, images/Lit-Electric-logo.png 1000w" alt="" class="logo"></a>
       <div class="menu-button-2 w-nav-button">
         <div class="w-icon-nav-menu"></div>
+        <a href="/admin/">Admin Panel</a>
+
       </div>
       <nav role="navigation" class="nav-menu---dropdown w-nav-menu">
         <a href="index.html" target="_blank" aria-current="page" class="nav-link-2 whitenav w-nav-link w--current">Home</a>
